make stack operations of instructions idempotent before instruction execution, to enable future plugins to read instruction operands without side effects and make reading operands overall more robust and less error prone.